python_file/logs/app.log
2025-02-10 17:30:44,082 ERROR: Exception on /galerie [GET] [in /Users/nadimbenkrouidem/miniconda3/lib/python3.12/site-packages/flask/app.py:875]
Traceback (most recent call last):
  File "/Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py", line 188, in galerie
    response = supabase.storage.from_('UserImg').list(
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: SyncBucketActionsMixin.list() got an unexpected keyword argument 'search'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/Users/nadimbenkrouidem/miniconda3/lib/python3.12/site-packages/flask/app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/nadimbenkrouidem/miniconda3/lib/python3.12/site-packages/flask/app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/nadimbenkrouidem/miniconda3/lib/python3.12/site-packages/flask/app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/nadimbenkrouidem/miniconda3/lib/python3.12/site-packages/flask/app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py", line 76, in decorated_function
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py", line 210, in galerie
    return render_template('galerie.html', error=str(e), images=[])
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/nadimbenkrouidem/miniconda3/lib/python3.12/site-packages/flask/templating.py", line 149, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/nadimbenkrouidem/miniconda3/lib/python3.12/site-packages/jinja2/environment.py", line 1084, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/nadimbenkrouidem/miniconda3/lib/python3.12/site-packages/jinja2/environment.py", line 1013, in get_template
    return self._load_template(name, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/nadimbenkrouidem/miniconda3/lib/python3.12/site-packages/jinja2/environment.py", line 972, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/nadimbenkrouidem/miniconda3/lib/python3.12/site-packages/jinja2/loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/nadimbenkrouidem/miniconda3/lib/python3.12/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/Users/nadimbenkrouidem/miniconda3/lib/python3.12/site-packages/jinja2/environment.py", line 939, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "/Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/templates/galerie.html", line 33, in template
    {% endblock %}
jinja2.exceptions.TemplateSyntaxError: Encountered unknown tag 'endblock'.
2025-02-10 17:30:44,089 ERROR: Erreur serveur: 500 Internal Server Error: The server encountered an internal error and was unable to complete your request. Either the server is overloaded or there is an error in the application. [in /Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py:294]
2025-02-10 17:31:28,233 INFO: Démarrage de l'application [in /Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py:61]
2025-02-10 17:32:00,735 INFO: Démarrage de l'application [in /Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py:61]
2025-02-10 17:32:27,120 INFO: Démarrage de l'application [in /Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py:61]
2025-02-10 18:34:59,375 INFO: Démarrage de l'application [in /Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py:61]
2025-02-10 18:37:13,247 INFO: Démarrage de l'application [in /Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py:61]
2025-02-10 18:41:42,539 INFO: Démarrage de l'application [in /Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py:61]
2025-02-10 18:42:01,559 INFO: Connexion réussie pour l'utilisateur: nadim.benkrouidem@gmail.com [in /Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py:105]
2025-03-06 13:05:51,825 INFO: Démarrage de l'application [in /Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py:61]
2025-03-06 13:06:01,355 INFO: Connexion réussie pour l'utilisateur: nadim.benkrouidem@gmail.com [in /Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py:105]
2025-03-06 13:06:23,473 INFO: Début de l'upload [in /Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py:178]
2025-03-06 13:06:23,478 INFO: Upload vers Dirty_Footprint [in /Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py:196]
2025-03-06 13:06:23,819 INFO: Upload vers UserImg/nadim.benkrouidem_at_gmail.com [in /Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py:209]
2025-03-06 13:06:24,158 INFO: Upload réussi dans les deux buckets! [in /Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py:223]
2025-03-06 13:09:56,040 INFO: Connexion réussie pour l'utilisateur: nadim.benkrouidem@gmail.com [in /Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py:105]
2025-03-06 13:11:17,877 INFO: Démarrage de l'application [in /Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py:61]
2025-03-06 13:11:25,391 INFO: Connexion réussie pour l'utilisateur: nadim.benkrouidem@gmail.com [in /Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py:105]
2025-03-06 13:11:33,555 INFO: Début de l'upload [in /Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py:178]
2025-03-06 13:11:33,558 INFO: Upload vers UserImg/nadim.benkrouidem_at_gmail.com [in /Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py:196]
2025-03-06 13:11:34,131 INFO: Upload réussi! [in /Users/nadimbenkrouidem/Desktop/git_MSPR_6.1/python_file/app.py:210]
